[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "payelink-agent-search"
dynamic = ["version"]
description = "Python client for the Payelink Agent Search API."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]
keywords = ["payelink-agent-search", "sdk", "agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
]

[tool.hatch.version]
path = "payelink_agent_search/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["payelink_agent_search"]

[tool.hatch.build.targets.sdist]
include = [
    "payelink_agent_search",
    "README.md",
    "tests",
    "examples",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.15.1",
]
